--- a/Portfolio-architecte-sophie-bluel-master/FrontEnd/assets/style.css
+++ b/Portfolio-architecte-sophie-bluel-master/FrontEnd/assets/style.css
@@ -125,6 +125,31 @@ li:hover {
 	text-align: center;
 	margin-bottom: 1em;
 }
+/*** CSS Filters ***/
+.filters{
+	display: flex;
+	gap: 10px;
+	justify-content: center;
+	margin-bottom: 50px
+}
+.filters span{
+	font-family: 'Syne';
+	font-weight: 700;
+	font-size: 16px;
+	color: #1D6154;
+	display: flex;
+    align-items: center;
+	height: 37px;
+	border: 1px solid #1D6154;
+	border-radius: 60px;
+	padding-left: 10px;
+    padding-right: 10px;	
+}
+.filters span:hover{
+	color: white;
+	background-color: #1D6154;
+}
+/*** CSS Filters ***/
 .gallery {
 	width: 100%;
 	display: grid;
