--- a/Portfolio-architecte-sophie-bluel-master/FrontEnd/assets/style.css
+++ b/Portfolio-architecte-sophie-bluel-master/FrontEnd/assets/style.css
@@ -237,3 +237,80 @@ footer nav ul {
 .modify span, .modify img{
 	margin-bottom: 2em;	
 }
+/*** Modal ***/
+.modal_container{	
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+.overlay{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.4);
+}
+.modal{
+	position: absolute;
+	background-color: white;
+	text-align: center;
+	padding: 60px 100px 45px 105px;
+	border-radius: 10px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+}
+.modal span{
+	font-size: 26px;
+}
+.modal_button{
+	width: 237px;
+	height: 36px;
+	margin: auto;	
+	border-radius: 60px;
+	background-color: #1D6154;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border: none;
+	color: white;
+	font-family: 'Syne';
+	font-size: 14px;
+	margin-top: 38px;
+}
+.modal_works{
+	height: 250px;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 26px 6px;
+	margin-top: 46px;
+	margin-bottom: 63px;
+	border-bottom: 1px solid #B3B3B3;
+	overflow: auto;
+}
+.modal_works_img{
+	width: 79.2px;
+	height: 104px;
+}
+.modal_close{
+	position: absolute;
+	top: 10px;
+	right: 10px;
+}
+.delete_works{
+	position: absolute;
+	width: 17px;
+	height: 17px;
+	top: 6px;
+	left: 55px;
+}
+.modal_works figure{
+	position: relative;
+}
+.modal:before{
+	width: 420px;
+	height: 1px;
+	background: #B3B3B3;
+}
