--- a/Portfolio-architecte-sophie-bluel-master/FrontEnd/assets/style.css
+++ b/Portfolio-architecte-sophie-bluel-master/FrontEnd/assets/style.css
@@ -185,6 +185,17 @@ footer nav ul {
 	margin: 2em
 }
 /********** My Works *********/
+/***** Error Form *****/
+.error{
+	display: none;
+	color: #af4242;
+	background-color: #fde8ec;
+	padding: 10px
+}
+.display-error{
+	display: block;	
+	margin-top: 15px;
+}
 /***** CSS Filters *****/
 .filters{
 	display: flex;
@@ -266,7 +277,8 @@ footer nav ul {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
-	width: 420px;
+	width: 50%;
+	max-width: 420px;
 	padding: 30px 105px 30px 105px;
 	background-color: white;
 	border-radius: 10px;
@@ -284,13 +296,12 @@ footer nav ul {
 }
 /*** Modal Gallery Works Container ***/
 .modal_works{
-	height: 370px;
+	min-height: 370px;
 	display: flex;
 	flex-wrap: wrap;
 	gap: 26px 6px;
 	margin-top: 46px;
-	margin-bottom: 68px;
-	overflow: auto;
+	margin-bottom: 68px;	
 }
 /*** Modal Gallery Icon Delete ***/
 .modal_works figure{
@@ -350,12 +361,18 @@ footer nav ul {
 	background: #E8F1F6;
 	border-radius: 3px;
 }
+.modal_add_picture_container label{
+	margin: 0 !important;
+}
+input[type='file']{
+	display: none;
+}
 .modal_add_picture_button{
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	width: 173px;
-	height: 36px;
+	height: 36px !important;
 	border-radius: 50px;
 	background: #CBD6DC;
 	color: #306685;	
