--- a/Portfolio-architecte-sophie-bluel-master/FrontEnd/assets/style.css
+++ b/Portfolio-architecte-sophie-bluel-master/FrontEnd/assets/style.css
@@ -93,6 +93,7 @@ nav ul {
 nav li {
 	padding: 0 10px;
 	font-size: 1.2em;
+	cursor: pointer;
 }
 
 li:hover {
@@ -177,6 +178,7 @@ input[type="submit"]{
 	width: 180px;
 	text-align: center;
 	border-radius: 60px ;
+	cursor: pointer;
 }
 
 footer nav ul {
@@ -196,7 +198,7 @@ a{
 	background-color: #fde8ec;
 	padding: 10px
 }
-.display-error{
+.display_error{
 	display: block;	
 	margin-top: 15px;
 }
@@ -209,7 +211,6 @@ a{
 }
 .validate_delete_works{
 	position: relative;
-	top: -55px;
 }
 .error_add_works{
 	position: relative;
@@ -239,7 +240,8 @@ a{
 	border: 1px solid #1D6154;
 	border-radius: 60px;
 	padding-left: 10px;
-    padding-right: 10px;	
+    padding-right: 10px;
+	cursor: pointer;	
 }
 .filters span.active{
 	background-color: #1D6154;
@@ -277,6 +279,7 @@ a{
 	align-items: center;
 	justify-content: center;
 	gap: 12px;
+	cursor: pointer;
 }
 .modify span, .modify img{
 	margin-bottom: 2em;	
@@ -315,6 +318,7 @@ a{
 	position: absolute;
 	top: 15px;
 	right: 20px;
+	cursor: pointer;
 }
 /*** Modal Title ***/
 .modal span{
@@ -341,6 +345,7 @@ a{
 	height: 17px;
 	top: 6px;
 	left: 55px;
+	cursor: pointer;
 }
 /*** Modal Works Img Width/Height ***/
 .modal_works_img{
@@ -367,15 +372,17 @@ a{
 	color: white;
 	font-family: 'Syne';
 	font-size: 14px;
+	cursor: pointer;
 }
 /*** Modal Form Arrow ***/
 .modal_arrow{
 	position: absolute;
 	top: 20px;
 	left: 20px;
+	cursor: pointer;
 }
 /*** Modal Form Add Picture Container ***/
-#modal_add_picture_container{
+#modal_add_img_container{
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -385,29 +392,29 @@ a{
 	background: #E8F1F6;
 	border-radius: 3px;
 }
-.add_picture_container{
+.add_img_container{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	gap: 6px;
 }
-.preview_picture{
+.img_placeholder{
 	position: absolute;
 	display: none;
 	width: 30%;
 	height: 100%;
 }
-#modal_add_picture_container label{
+#modal_add_img_container label{
 	margin: 0;
 }
-#modal_add_picture_container span{
+#modal_add_img_container span{
 	font-size: 14px;
 }
 input[type='file']{
 	display: none;
 }
-#modal_add_picture_button{
+#modal_add_img_button{
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -416,6 +423,7 @@ input[type='file']{
 	border-radius: 50px;
 	background: #CBD6DC;
 	color: #306685;	
+	cursor: pointer;
 }
 /*** Modal Form Section ***/
 .modal_form #contact{
@@ -432,7 +440,7 @@ input[type='file']{
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 	background-color: white;
 }
-.modal_add_picture_container .modal_add_picture_text{
+.modal_add_img_container .modal_add_img_text{
 	color: #444;
 	font-size: 10px;
 }
