--- a/Portfolio-architecte-sophie-bluel-master/FrontEnd/assets/style.css
+++ b/Portfolio-architecte-sophie-bluel-master/FrontEnd/assets/style.css
@@ -202,6 +202,9 @@ a{
 	display: block;	
 	margin-top: 15px;
 }
+input:invalid ~ #modal_form_button {
+	background-color: #A7A7A7;
+  }
 /***** Validate Form *****/
 .validate{
 	display: none;	
@@ -448,6 +451,6 @@ input[type='file']{
 #modal_form_button {
 	max-width: 237px;
 	height: 36px !important;
-	background: #A7A7A7;
+	background-color: #1D6154;
 	margin: 0 auto;
 }
